--- a/templates/views/post.hbs
+++ b/templates/views/post.hbs
@@ -2,7 +2,7 @@
 	<div class="row">
 		<div class="col-sm-10 col-sm-offset-1 col-md-8 col-md-offset-2">
 			<article>
-				<p><a href="/articles">&larr; back to the blog</a></p>
+				<span><a href="/articles">&larr; back to the blog</a></span>
 				<hr>
 				<header>
 					<h1>{{data.post.title}}</h1>
